--- a/flappy_bird/index.html
+++ b/flappy_bird/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-container">
         <h1>Flappy Bird</h1>
-        <p>Tap anywhere on the screen to make the bird fly!</p>
+        <p>Tap anywhere on the screen or press the spacebar to make the bird fly!</p>
         <div id="score">Score: 0</div>
         <canvas id="gameCanvas"></canvas>
         <div class="settings">
@@ -20,6 +20,7 @@
                 <option value="hard">Hard</option>
             </select>
         </div>
+        <button id="replayButton" style="display: none;">Replay</button>
     </div>
     <script src="script.js"></script>
 </body>
